feat: - implementando autenticação com JWT token (bearer token) - adicionando endpoints para cadastro de usuário - endpoint para login - protegendo rotas com autenticação - criando config para admin padrão caso não existe na base