@@ -1,21 +1,27 @@
 package don.leo.yugiapp.config;
 
+import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Contact;
 import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
+import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
 public class OpenApiConfiguration {
 
+
     @Bean
     public OpenAPI defineOpenApi() {
         Server server = new Server();
-        server.setUrl("http://localhost:8080");
+        server.setUrl("http://localhost:8080/api");
         server.setDescription("Development");
 
         Contact myContact = new Contact();
@@ -28,6 +34,16 @@ public class OpenApiConfiguration {
                 .description("Esta api expõe endpoints para manter a pontuação dos jogadores")
                 .contact(myContact);
 
-        return new OpenAPI().info(information).servers(List.of(server));
+        return new OpenAPI()
+                .info(information)
+                .components(new Components()
+                        .addSecuritySchemes("bearer-key",
+                                new SecurityScheme().type(SecurityScheme.Type.HTTP).scheme("bearer")))
+                .addSecurityItem(
+                        new SecurityRequirement()
+                                .addList("bearer-jwt", Arrays.asList("read", "write"))
+                                .addList("bearer-key", Collections.emptyList())
+                )
+                .servers(List.of(server));
     }
 }
